# Information_System_Project

./: README.md  elements-cdc.txt
phase-2/IHM/: accueil.html  connexion.html  creation_compte.html  creation_partie.html  dashboard_joueur.html  dashboard_superviseur.html  graphe_fin_partie.html  lobby_joueur.html  lobby_superviseur.html  modification_chaine_logistique.html  rejoindre_partie.html  test.html
phase-3/Documents/: Revue de code 1.odt
phase-3/application/: MANIFEST.in  README.md  requirements.txt  setup.cfg
phase-3/application/beergame/: __init__.py  auth.py  db.py  function_util.py  graphs.py  index.py  play.py  schema-postgresql-test.sql  schema-postgresql.sql  step.py  supervise.py  utils.py
phase-3/application/beergame/static/: style.css
phase-3/application/beergame/templates/: base.html  game_rules.html  index.html
phase-3/application/beergame/templates/auth/: login.html  register.html
phase-3/application/beergame/templates/play/: dashboard.html  join.html  lobby.html  task_step_1.html  task_step_2.html  task_step_3.html  task_step_4.html  tracking_sheet.html  waiting_room.html
phase-3/application/beergame/templates/supervise/: change_initial_state.html  create.html  dashboard.html  graphics.html  join.html  lobby.html  main_page.html  task_step_4_Supervisor.html
phase-3/application/instance/: configurations.py
phase-3/application/tests/: conftest.py  test_beergame.py
