[metadata]
name = beergame
version = 0.9.1
license = BSD-3-Clause
maintainer = Guillaume Lecourt, Chaymae Laanaya, Louis Dage, Patrick Chan 
maintainer_email = guillaume.lecourt@mines-albi.fr, louis.dage@mines-albi.fr, chaymae.laanaya@mines-albi.fr,patrick.chan@mines-albi.fr
description = beergame est l'application de simulation d'une chaîne logistique adapté pour PostgreSQL
long_description = file: README.md
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires = 
	Flask
	python-dotenv
	psycopg2-binary
	sqlalchemy >= 1.4.0b1
	Flask-SQLAlchemy-Session==1.1

[options.extras_require]
test = 
	pytest
	pytest-dotenv
	coverage
build = 
	build

[tool:pytest]
testpaths = tests
env_files = 
	.flaskenv
filterwarnings = 
	ignore::DeprecationWarning

[coverage:run]
branch = True
source = 
	beergame

[egg_info]
tag_build = beergame
tag_date = 0

